syntax = "proto3";

import "google/protobuf/timestamp.proto";

// buf:lint:ignore PACKAGE_DIRECTORY_MATCH
package chat.v1;

option go_package = "./chat";

service ChatService {
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse);
  rpc JoinRoom(stream JoinRoomRequest) returns (stream JoinRoomResponse);
}

message CreateRoomRequest {
  string user_id = 1;
  string name = 2;
}

message CreateRoomResponse {
  string room_id = 1;
}

message JoinRoomRequest {
  oneof payload {
    JoinRoom join_room = 1;
    SendMessage send_message = 2;
  }

  message JoinRoom {
    string room_id = 1;
    string user_id = 2;
    string last_read_message_id = 3;
  }

  message SendMessage {
    string text = 1;
  }
}

message JoinRoomResponse {
  oneof payload {
    Message message = 1;
    MessageList message_list = 2;
  }
}

message Message {
  string id = 1;
  string user_id = 2;
  string room_id = 3;
  string text = 4;
  google.protobuf.Timestamp created_at = 5;
}

message MessageList {
  repeated Message messages = 1;
}